2014-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* indices.c (info_indices_of_file_buffer): Don't consider anchors
	as index nodes even if they have "Index" in their name.

2014-04-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* nodes.c (info_create_node): New function initializing
	created NODE structures.
	* footnotes.c (make_footnotes_node)
	* indices.c (create_virtindex_node)
	* man.c (manpage_node_of_file_buffer)
	* nodes.c (info_get_node_of_file_buffer)
	(info_node_of_file_buffer_tags)
	* window.c (string_to_node, message_buffer_to_node): Call
	info_create_node.

	* session.c (kill_node): Copy whole NODE structure at once instead
	of field-by-field.

2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* session.c (forward_move_node_structure)
	(backward_move_node_structure): Remove accesses of
	info_parsed_filename and info_parsed_nodename.

2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info-utils.c (info_parse_label): Return label with no parsing.
	All callers changed.
	* session.c (info_handle_pointer): Do not assume anything
	about the values of info_parsed_filename and info_parsed_nodename.
	Call info_get_node_with_defaults to get target node.  All callers
	changed.
	* session.c (INFO_LABEL_FOUND): Macro deleted.

2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* nodes.c (get_filename_and_nodename): New static function setting
	defaults for node specifications.
	(info_get_node, info_get_node_with_defaults): New argument 'window'
	for info_get_node.  Function renamed, with wrapper with old arguments.
	Call get_filename_and_nodename.
	(info_get_node_of_file_buffer): Remove unnecessary check for null
	nodename - done by calling code.

	* session.c (info_select_reference): Call info_get_node_with_defaults.
	(info_parse_and_select): Do not call info_parse_node.

2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c: Reorder file into sections.  No functional changes.

2014-04-13  Gavin Smith  <gavinsmith0123@gmail.com>
