@@ -1,13 +1,16 @@
-# Initialize test of interactive operation
+# Initialize test of interactive operation  
+# This file is not to be run directly
 
 # Code to redirect output to pseudoterminal
 # We could perhaps use AM_TESTS_FD_REDIRECT in Makefile.am instead,
 # although this would stop us from running test scripts from the command-line.
 
-rm -f pty_file
-./pseudotty >pty_file &
+GINFO_PTY_FILE=$0.pty
+rm -f $GINFO_PTY_FILE
+./pseudotty >$GINFO_PTY_FILE &
 PTY_PID=$!
 # Wait for pseudotty process to create file
-while test ! -f pty_file; do sleep 1; done
-exec >"$(cat pty_file | tr -d '\n')"
+while test ! -f $GINFO_PTY_FILE; do sleep 1; done
+exec >"$(cat $GINFO_PTY_FILE | tr -d '\n')"
+rm -f $GINFO_PTY_FILE
 
